<resources>
    <string name="app_name">The Trek</string>
    <string name="button_text_set_anchor" translatable="false">ANCHOR SETTING</string>
    <string name="switch_render_streetscaope_geometry" translatable="false">SHOW GEOMETRY</string>
    <string name="button_text_clear_anchors" translatable="false">CLEAR ALL ANCHORS</string>
    <string name="tap_screen_text" translatable="false">TAP ON SCREEN TO CREATE ANCHOR</string>
    <string name="status_unsupported" translatable="false">This device is not supported.</string>
    <string name="status_pretracking" translatable="false">Localizing your device to set anchor.</string>
    <string name="status_earth_state_error" translatable="false">There was an error state error, check that you have a valid authentication for the ARCore API.</string>
    <string name="status_localize_hint" translatable="false">Point your camera at buildings, stores, and signs near you.</string>
    <string name="status_localize_timeout" translatable="false">Localization not possible.\nClose and open the app to restart session.</string>
    <string name="status_localize_complete" translatable="false">Localization complete.</string>
    <string name="status_terrain_anchor" translatable="false">Terrain anchor state: %1$s</string>
    <string name="status_rooftop_anchor" translatable="false">Rooftop anchor state: %1$s</string>
    <string name="terrain_anchor_no_result_yet" translatable="false">Still resolving the terrain anchor. Please make sure you\'re in an area that has VPS coverage.</string>
    <string name="terrain_anchor_resource_exhausted" translatable="false">Too many terrain anchors have already been held. Clear all anchors to create new ones.</string>
    <plurals name="status_anchors_set">
        <item quantity="one">%d / %d Anchor set</item>
        <item quantity="other">%d / %d Anchors set</item>
    </plurals>
    <plurals name="status_anchors_cleared">
        <item quantity="one">%d Anchor cleared</item>
        <item quantity="other">%d Anchors cleared</item>
    </plurals>
    <string name="geospatial_pose_not_tracking" translatable="false">GEOSPATIAL POSE: Not tracking</string>
    <string name="geospatial_pose" translatable="false">LAT/LNG: %.6f˚, %.6f˚\n\t\t\tACCURACY: %.2fm\nALTITUDE: %.2fm\n\t\t\tACCURACY: %.2fm\nORIENTATION: [%.1f, %.1f, %.1f, %.1f]\n\t\t\tYAW ACCURACY: %.1f˚</string>
    <string name="share_experience_title">AR in the real world</string>
    <string name="share_experience_message">To power this session, Google will process visual data from your camera.</string>
    <string name="agree_to_share">Get started</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_url" translatable="false">https://developers.google.com/ar/data-privacy</string>
    <string name="vps_unavailable_title">VPS not available</string>
    <string name="vps_unavailable_message">Your current location does not have VPS coverage. Your session will be using your GPS signal only if VPS is not available.</string>
    <string name="continue_button">Continue</string>
    <string name="google_maps_key">AIzaSyBKMivuX-s-BvbGQOxiFbo7Q0_ZyrjePdo</string>
    <string name="record">Record</string>
    <string name="recording">Recording</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="linear_acc">Linear Acceleration</string>
    <string name="status_stopped">Hit record button to start</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="speed_normal">Normal</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_fastest">Fastest</string>
    <string name="rw_permission_string">Kindly allow read/write permission to save recorded dataset into external storage</string>
    <string name="recording_stopped">Recording Stopped</string>
    <string name="add_label">Add Label</string>
    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
    <string name="yogi" translatable="false">Yogi</string>
    <string name="get_started" translatable="false">Get started</string>
    <string name="built_for" translatable="false">Built for</string>
    <string name="users" translatable="false">All users</string>
    <string name="add_your_first_user" translatable="false">Add your first user</string>
    <string name="add" translatable="false">Add</string>
    <string name="display_poses" translatable="false">Display Poses</string>
    <string name="stopwatch" translatable="false">Stopwatch</string>
    <string name="send_email_to_self" translatable="false">Send email to self</string>
    <string name="take_progress_picture" translatable="false">Take picture for form evaluation</string>
    <string name="gender_unknown" formatted="false" translatable="false">Gender Unknown</string>
    <string name="profile_info" translatable="false">Profile Information</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="date_of_birth" translatable="false">Date of Birth</string>
    <string name="weight_label" translatable="false">Weight:</string>
    <string name="kg" translatable="false">kg</string>
    <string name="save" translatable="false">Save</string>
    <string name="dob_error" translatable="false">Please enter a date with the format D-M-YYYY</string>
    <string name="weight_error" translatable="false">Please enter a valid number</string>
    <string name="name_error" translatable="false">Name cannot be empty</string>
    <string name="surname_error" translatable="false">Surname cannot be empty</string>
    <string name="info" translatable="false">%s, born on %s</string>
    <string name="weight" translatable="false">Weight: %s kg</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="email_yourself" translatable="false">Send email to self</string>
    <string name="to" translatable="false">To</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="email_body" translatable="false">Email body</string>
    <string name="send" translatable="false">Send</string>
    <string name="body_text" translatable="false">Dear self, \nYou have done your yoga and meditation for the day.\nBelieve in yourself, trust your instincts \nand live life to the fullest each and every second.\nYours truly.</string>
    <string name="introtocore" translatable="false">Get Ready to Stregthen your Core</string>
    <string name="dolphin_text" translatable="false">Similar to the regular plank, but adding the dolphin pose. Goal is to keep arms parallel to each other when on the floor, while also curling your toes but keeping that core engaged almost as if your body is a table. Perform for 30 seconds, for 2–3 times but rest up properly before each execution</string>
    <string name="warriortext" translatable="false">Start out in lunge position. Extend arms upwards but keep them parallel. Focus on breathing deeply, especially on exhaling which is what contracts alot of the core in this exercise. Repeat 2 times per leg for around 30 seconds - 1 minute.</string>
    <string name="Bridgetext" translatable="false">Although this does bring the back muscles into play. We will see a different variation of this in our back category which will target the back even better. Remember to breath in and out while holding the position and press your arms on the floor almost as if you want to lift your whole body. Hold for 20-30 breaths.</string>
    <string name="introtolegs" translatable="false">Get Ready to Strenthen your Legs</string>
    <string name="DownDog" translatable="false">Downward-Facing Dog Pose</string>
    <string name="dogstring" translatable="false">Streches back, hamstrings, glutes and calves, along with upper body muscles such as shoulders. Extreme flexibility can be showcased by having the no space between heels and floor.</string>
    <string name="triangle_pose" translatable="false">Triangle Pose</string>
    <string name="Tposestring" translatable="false">Triangle pose focuses on stretching and lengthening the muscles in your thighs, hips, and back. You should also feel a good stretch in your hamstrings.</string>
    <string name="BridgevarText" translatable="false">Bridge Pose can help strengthen your glutes, hamstrings, and lower back. It’s also an excellent hip and chest opener.</string>
    <string name="Halfmoontext" translatable="false">This standing pose helps strengthen your quads, glutes, ankles, and core. It also stretches your hamstrings, calves, and groin muscles.</string>
    <string name="mindtext" translatable="false">Get Ready to Strengthen your Mind</string>
    <string name="medtext" translatable="false">Meditating cross-legged is an excellent option for those with open hips and no joint problems. Sitting with crossed legs is symmetrical, secure, feels grounding, and allows for an unrestricted flow of prana throughout the body.</string>
    <string name="cross_legged_position" translatable="false">Cross Legged Position</string>
    <string name="kneeling_pose" translatable="false">Kneeling Pose</string>
    <string name="kneelText" translatable="false">If you prefer to sit on the ground, but crossed legs are causing discomfort, kneeling in Hero pose is another possibility for a grounding meditation seat that lengthens the spine. Either sit back on your heels or add cushions underneath your sit bones to help alleviate weight-bearing stress on your lower body.</string>
    <string name="textChair" translatable="false">Many people find that it’s most comfortable to meditate while sitting on a chair. If possible, sit near the edge of the chair, with a straight spine, relaxed shoulders, hands in your lap and your feet flat on the floor.</string>
    <string name="chair_position" translatable="false">Chair Position</string>
    <string name="vwpose" translatable="false">Victorious Warrior Pose</string>
    <string name="outdoor1" translatable="false">Adventure and Outdoor Activities</string>
    <string name="outdoor2" translatable="false"> Parkour is a movement discipline where you navigate your environment by running, jumping, and climbing over obstacles with fluidity and efficiency.</string>
    <string name="geoText" translatable="false">Geocaching is like a real-world treasure hunt using GPS coordinates to find hidden caches. It gets you outdoors and can involve hiking, walking, or biking.</string>
    <string name="textRock" translatable="false"> Indoor or outdoor rock climbing offers an excellent full-body workout while challenging your problem-solving skills.</string>
    <string name="textDisk" translatable="false">Similar to traditional golf, but you throw a disc into a basket instead of hitting a ball into a hole. It is a low-impact activity that can be enjoyed in a variety of outdoor settings.</string>
    <string name="hiking" translatable="false">Hiking is an outdoor activity that combines exercise with adventure by allowing individuals to explore natural trails and landscapes. It offers a chance to connect with nature, breathe in fresh air, and enjoy the sights and sounds of the outdoors. Whether for leisurely walks or challenging ascents, hiking provides physical fitness, mental relaxation, and a deep connection with the environment, making it accessible and enjoyable for people of all ages and fitness levels.</string>
</resources>